--- a/pages/admin/edicaoProduto---.html
+++ b/pages/admin/edicaoProduto---.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
     <link rel="stylesheet" href="../../styles/admin/produto.css">
-    <title id="tituloHead"></title>
+    <title>EC_Admin_Novo Produto</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
     </style>
@@ -55,6 +55,6 @@
             </div>
         </section>
     </main>
-    <script defer type="module" src="../../scripts/admin/edicaoProduto.js"></script>
+    <script defer type="module" src="../../scripts/admin/novoProduto.js"></script>
 </body>
 </html>
