--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -29,7 +29,7 @@
                 <h3>Listas</h3>
                 <a href="./filtro.html?filtro=ofertas">Ofertas</a>
                 <a href="./filtro.html?filtro=novidades">Novidades</a>
-                <a href="./filtro.html?filtro=estoque">Repor estoque</a>
+                <a href="./filtro.html?filtro=estoque">Baixo estoque</a>
             </div>
             <div class="menu__cadastrar">
                 <h3>Cadatrar</h3>
