qr code pagamento

--- a/pages/carrinho.html
+++ b/pages/carrinho.html
@@ -123,12 +123,12 @@
             <div class="conclusao__planoDeFundo">
                 <div class="conclusao__popup">
                     <div class="popup__mensagem">
-                        <!-- <img src="../assets/images/2135A6_qrcode-pagamento.svg" alt="QR Code PIX"> -->
-                        <h2>COMPRA FINALIZADA</h2>
-                        <h2>PREVISÃO DE ENTREGA</h2>
-                        <h2 id="previsaoEntrega"></h2>
+                        <p>Escaneio o QR Code<br>para realizar o pagamento.</p><br>
+                        <img src="../assets/images/2135A6_qrcode-pagamento.svg" alt="QR Code PIX">
+                        <p>Previsão de entrega:</p>
+                        <p id="previsaoEntrega"></p><br>
                     </div>
-                    <button class="popup__botao" onclick="fecharPopupConclusao()">VOLTAR PARA A HOME</button>
+                    <button class="popup__botao" onclick="fecharPopupConclusao()">FINALIZAR COMPRA</button>
                 </div>
             </div>
         </section>
