--- a/pages/vitrine.html
+++ b/pages/vitrine.html
@@ -15,7 +15,7 @@
     <header class="menu-sup">
         <nav>
             <div class="menu-sup__home">
-                <a href="../../index.html">E_COMMERCE</a>
+                <a href="../../index.html" id="homeHeader">E_COMMERCE</a>
             </div>
             <div class="menu__busca">
                 <label for="buscaProdutos"></label>
