--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -21,7 +21,7 @@
     </header>
     <main class="conteudo">
         <h1 class="conteudo__titulo">CADASTRO</h1>
-        <div class="conteudo__formulario">
+        <form class="conteudo__formulario">
             <div class="formulario__dadosPessoais">
                 <label for="formulario__nome">Nome*</label>
                 <input type="text" id="formulario__nome" placeholder="Nome" required>
@@ -33,13 +33,13 @@
                 <input type="text" id="formulario__cep" placeholder="00000-000" required>
                 <label for="formulario__endereco">Endereço*</label>
                 <input type="text" id="formulario__logradouro" placeholder="Logradouro" required>
-                <label for="formulario__endereco">Número*</label>
-                <input type="text" id="formulario__numero" placeholder="Logradouro" required>
+                <label for="formulario__numero">Número*</label>
+                <input type="text" id="formulario__numero" placeholder="Número" required>
                 <label for="formulario__complemento">Complemento</label>
                 <input type="text" id="formulario__complemento" placeholder="Apto, bloco, etc.">
-                <label for="formulario__endereco">Bairro*</label>
+                <label for="formulario__bairro">Bairro*</label>
                 <input type="text" id="formulario__bairro" placeholder="Bairro" required>
-                <label for="formulario__endereco">Cidade, UF*</label>
+                <label for="formulario__cidadeUf">Cidade, UF*</label>
                 <input type="text" id="formulario__cidadeUf" placeholder="Cidade, UF" required>
             </div>
             <div class="formulario__dadosAcesso">
@@ -52,8 +52,8 @@
                 <input type="password" id="formulario__confirmarSenha" placeholder="Senha" required>
                 <h6 id="formulario__alertaSenhaRepetir"></h6>
             </div>
-            <button type="submit" id="formulario__botaoCadastrar" onclick="cadastrarUsuario(event)" disabled>CONCLUIR CADASTRO</button>
-        </div>
+            <button type="submit" id="formulario__botaoCadastrar" disabled>CONCLUIR CADASTRO</button>
+        </form>
         <section class="container__conclusao">
             <div class="conclusao__planoDeFundo">
                 <div class="conclusao__popup">
