Bug edição e cadastro produtos - admin

--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../../assets/icons/favicon.png">
     <link rel="stylesheet" href="../../styles/admin/mainAdmin.css">
     <link rel="stylesheet" href="../../styles/admin/produto.css">
-    <title id="tituloHead"></title>
+    <title id="tituloHead">EC_Admin_Edição Produto</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900&display=swap');
     </style>
@@ -16,27 +16,27 @@
         <div class="menu__lateral">
             <h2>E_COMMERCE</h2>
             <div>
-                <h3><a href="./dashboard.html">Dashboard</a></h3>
+                <h3><a href="./dashboard.html">DASHBOARD</a></h3>
             </div>
             <div class="menu__existentes">
-                <h3>Produtos Cadastrados</h3>
+                <h3>PRODUTOS CADASTRADOS</h3>
                 <a href="./filtro.html?categoria=A">Categoria A</a>
                 <a href="./filtro.html?categoria=B">Categoria B</a>
                 <a href="./filtro.html?categoria=C">Categoria C</a>
                 <a href="./filtro.html?categoria=D">Categoria D</a>
             </div>
             <div class="menu__listas">
-                <h3>Listas</h3>
+                <h3>LISTAS</h3>
                 <a href="./filtro.html?filtro=ofertas">Ofertas</a>
                 <a href="./filtro.html?filtro=novidades">Novidades</a>
                 <a href="./filtro.html?filtro=estoque">Baixo estoque</a>
             </div>
             <div class="menu__cadastrar">
-                <h3>Cadatrar</h3>
+                <h3>CADASTRAR</h3>
                 <a href="./novoProduto.html">Novo produto</a>
             </div>
             <div>
-                <a href="../../index.html">Sair</a>
+                <a href="../../index.html">SAIR</a>
             </div>
         </div>
     </header>
@@ -51,7 +51,6 @@
         </div>
         <section class="conteudo__container" id="conteudoContainer">
             <div class="container__formulario" id="containerFormulario">
-
             </div>
         </section>
     </main>
