--- a/pages/admin/filtro.html
+++ b/pages/admin/filtro.html
@@ -16,27 +16,27 @@
         <div class="menu__lateral">
             <h2>E_COMMERCE</h2>
             <div>
-                <h3><a href="./dashboard.html">Dashboard</a></h3>
+                <h3><a href="./dashboard.html">DASHBOARD</a></h3>
             </div>
             <div class="menu__existentes">
-                <h3>Produtos Cadastrados</h3>
+                <h3>PRODUTOS CADASTRADOS</h3>
                 <a href="./filtro.html?categoria=A">Categoria A</a>
                 <a href="./filtro.html?categoria=B">Categoria B</a>
                 <a href="./filtro.html?categoria=C">Categoria C</a>
                 <a href="./filtro.html?categoria=D">Categoria D</a>
             </div>
             <div class="menu__listas">
-                <h3>Listas</h3>
+                <h3>LISTAS</h3>
                 <a href="./filtro.html?filtro=ofertas">Ofertas</a>
                 <a href="./filtro.html?filtro=novidades">Novidades</a>
                 <a href="./filtro.html?filtro=estoque">Baixo estoque</a>
             </div>
             <div class="menu__cadastrar">
-                <h3>Cadatrar</h3>
+                <h3>CADASTRAR</h3>
                 <a href="./novoProduto.html">Novo produto</a>
             </div>
             <div>
-                <a href="../../index.html">Sair</a>
+                <a href="../../index.html">SAIR</a>
             </div>
         </div>
     </header>
