--- a/pages/admin/edicaoProduto.html
+++ b/pages/admin/edicaoProduto.html
@@ -16,10 +16,10 @@
         <div class="menu__lateral">
             <h2>E_COMMERCE</h2>
             <div>
-                <h3><a href="./dashboard.html">DASHBOARD</a></h3>
+                <a href="./dashboard.html"><h3>DASHBOARD</h3></a>
             </div>
             <div class="menu__existentes">
-                <h3>PRODUTOS CADASTRADOS</h3>
+                <h3>CADASTRADOS</h3>
                 <a href="./filtro.html?categoria=A">Categoria A</a>
                 <a href="./filtro.html?categoria=B">Categoria B</a>
                 <a href="./filtro.html?categoria=C">Categoria C</a>
@@ -36,7 +36,7 @@
                 <a href="./novoProduto.html">Novo produto</a>
             </div>
             <div>
-                <a href="../../index.html">SAIR</a>
+                <a href="../../index.html"><h3>SAIR</h3></a>
             </div>
         </div>
     </header>
