--- a/pages/admin/novoProduto.html
+++ b/pages/admin/novoProduto.html
@@ -150,7 +150,9 @@
                             <input type="number" name="estoque" id="estoque" placeholder="Quantidade em estoque" required>
                         </div>
                     </fieldset>
-                    <button type="submit" class="formulario__botao" id="formulario__botao">CADASTRAR</button>
+                    <div class="formulario__botoes">
+                        <button type="submit" class="formulario__botao" id="botaoCadastrar">CADASTRAR</button>
+                    </div>
                 </form>
             </div>
         </section>
